# CongressGov

./: .env.example  .gitignore  Makefile  README.md  client.py  main.py  pyproject.toml  tailwind.config.js  wbs-main.py
cache/: Enviro Fed Web Tracker - 2025-.csv
congress/: cdg_client.py  congress.py  fdtreasury_client.py  fred.py  removed_env_data.py  removed_env_data_client.py
static/: styles.css  styles.out.css
templates/: index.html
