[project]
name = "congressgov"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "fastapi[all]>=0.115.11",
    "jinja2>=3.1.5",
    "dotenv>=0.9.9",
    "mcp[cli]>=1.3.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
